--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -467,7 +467,7 @@
     "    # YOUR CODE HERE\n",
     "    return postings.groupBy(lambda x: token2bucket_id(x[0])).map(lambda x: index.write_a_posting_list(x, bucket_name))\n",
     "\n",
-    "def createIndex(index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, corpus_size, directory, isTitle):\n",
+    "def createIndex(index, w2df_dict, w2idf, doc_tfidf, term_total, term_similar_score, doc_norm, dl, avg_dl, corpus_size, directory, isTitle):\n",
     "    # collect all posting lists locations into one super-set\n",
     "    super_posting_locs = defaultdict(list)\n",
     "    for blob in client.list_blobs(bucket_name, prefix=f'postings_gcp/'):\n",
@@ -488,6 +488,8 @@
     "    index.doc_tfidf = doc_tfidf\n",
     "    # Add total number of terms dict\n",
     "    index.term_total = term_total\n",
+    "    # add similar words for each word\n",
+    "    index.term_similar_score = term_similar_score\n",
     "    # Add DL_body dict\n",
     "    index.dl = dl\n",
     "    # Add Average doc length\n",
@@ -509,20 +511,6 @@
     "    index_dst = f'gs://{bucket_name}/postings_gcp/{index_src}'\n",
     "    !gsutil cp $index_src $index_dst\n",
     "    !gsutil ls -lh $index_dst"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "word2vec = gensim.downloader.load('fasttext-wiki-news-subwords-300')"
    ],
    "metadata": {
     "collapsed": false,
@@ -588,6 +576,35 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "word2vec_glove = gensim.downloader.load('glove-wiki-gigaword-50')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def get_similar_words(term):\n",
+    "    return word2vec_glove.most_similar(term, topn=5)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "# Create the Body Indexes"
@@ -638,6 +655,9 @@
     "create_zipfs_graph_no_log(word_counts)\n",
     "create_zipfs_graph(word_counts)\n",
     "\n",
+    "# word to the 5 most similar words and their score\n",
+    "term_similar_score = {term: get_similar_words(term) for term in term_total.keys()}\n",
+    "\n",
     "# number of documents in the corpus\n",
     "N = len(dl)\n",
     "print(f\"number of docs in corpus: {N}\")\n",
@@ -656,7 +676,7 @@
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, body_index).collect()\n",
     "\n",
-    "createIndex(body_index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, N, 'body_index', False)\n",
+    "createIndex(body_index, w2df_dict, w2idf, doc_tfidf, term_total, term_similar_score, doc_norm, dl, avg_dl, N, 'body_index', False)\n",
     "\n",
     "end = time()\n",
     "print(end - start)"
@@ -716,6 +736,9 @@
     "create_zipfs_graph_no_log(word_counts)\n",
     "create_zipfs_graph(word_counts)\n",
     "\n",
+    "# word to the 5 most similar words and their score\n",
+    "term_similar_score = {term: get_similar_words(term) for term in term_total.keys()}\n",
+    "\n",
     "N = len(dl)\n",
     "print(f\"number of docs in corpus: {N}\")\n",
     "\n",
@@ -733,7 +756,7 @@
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, title_index).collect()\n",
     "\n",
-    "createIndex(title_index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, N, 'title_index', True)\n",
+    "createIndex(title_index, w2df_dict, w2idf, doc_tfidf, term_total, term_similar_score, doc_norm, dl, avg_dl, N, 'title_index', True)\n",
     "\n",
     "end = time()\n",
     "print(end - start)"
@@ -795,6 +818,9 @@
     "create_zipfs_graph_no_log(word_counts)\n",
     "create_zipfs_graph(word_counts)\n",
     "\n",
+    "# word to the 5 most similar words and their score\n",
+    "term_similar_score = {term: get_similar_words(term) for term in term_total.keys()}\n",
+    "\n",
     "N = len(dl)\n",
     "print(f\"number of docs in corpus: {N}\")\n",
     "\n",
@@ -812,7 +838,7 @@
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, anchor_index).collect()\n",
     "\n",
-    "createIndex(anchor_index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, N, 'anchor_index', False)\n",
+    "createIndex(anchor_index, w2df_dict, w2idf, doc_tfidf, term_total, term_similar_score, doc_norm, dl, avg_dl, N, 'anchor_index', False)\n",
     "\n",
     "end = time()\n",
     "print(end - start)"
@@ -871,7 +897,7 @@
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, anchor_index).collect()\n",
     "\n",
-    "createIndex(anchor_index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, N, 'anchor_index', False)"
+    "createIndex(anchor_index, w2df_dict, w2idf, doc_tfidf, term_total, term_similar_score, doc_norm, dl, avg_dl, N, 'anchor_index', False)"
    ],
    "metadata": {
     "collapsed": false,
