--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -22,9 +22,12 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "!pip install -q google-cloud-storage == 1.43.0\n",
+    "!pip install -q google-cloud-storage==1.43.0\n",
     "!pip install -q graphframes\n",
-    "!pip install -q gensim"
+    "!pip install -q opencv-contrib-python\n",
+    "!pip install --upgrade urllib3\n",
+    "!pip install gensim --no-binary :all:\n",
+    "!pip install --upgrade numpy"
    ],
    "metadata": {
     "collapsed": false,
@@ -595,7 +598,11 @@
    "outputs": [],
    "source": [
     "def get_similar_words(term):\n",
-    "    return word2vec_glove.most_similar(term, topn=5)"
+    "    try:\n",
+    "        similars = word2vec_glove.most_similar(term, topn=5)\n",
+    "    except:\n",
+    "        similars = [(term, 1) for i in range(5)]\n",
+    "    return similars"
    ],
    "metadata": {
     "collapsed": false,
@@ -650,10 +657,10 @@
     "# word counts map for the whole corpus\n",
     "term_total = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
     "print(f\"number of words in corpus: {len(term_total)}\")\n",
-    "print(f\"top ten words are: {term_total.items()[:10]}\")\n",
-    "print(f\"bottom ten words are: {term_total.items()[:-10]}\")\n",
-    "create_zipfs_graph_no_log(word_counts)\n",
-    "create_zipfs_graph(word_counts)\n",
+    "# print(f\"top ten words are: {term_total.items()[:10]}\")\n",
+    "# print(f\"bottom ten words are: {term_total.items()[:-10]}\")\n",
+    "create_zipfs_graph_no_log(term_total)\n",
+    "create_zipfs_graph(term_total)\n",
     "\n",
     "# word to the 5 most similar words and their score\n",
     "term_similar_score = {term: get_similar_words(term) for term in term_total.keys()}\n",
@@ -731,10 +738,10 @@
     "# word counts map for the whole corpus\n",
     "term_total = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
     "print(f\"number of words in corpus: {len(term_total)}\")\n",
-    "print(f\"top ten words are: {term_total.items()[:10]}\")\n",
-    "print(f\"bottom ten words are: {term_total.items()[:-10]}\")\n",
-    "create_zipfs_graph_no_log(word_counts)\n",
-    "create_zipfs_graph(word_counts)\n",
+    "# print(f\"top ten words are: {term_total.items()[:10]}\")\n",
+    "# print(f\"bottom ten words are: {term_total.items()[:-10]}\")\n",
+    "create_zipfs_graph_no_log(term_total)\n",
+    "create_zipfs_graph(term_total)\n",
     "\n",
     "# word to the 5 most similar words and their score\n",
     "term_similar_score = {term: get_similar_words(term) for term in term_total.keys()}\n",
@@ -813,10 +820,10 @@
     "# word counts map for the whole corpus\n",
     "term_total = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
     "print(f\"number of words in corpus: {len(term_total)}\")\n",
-    "print(f\"top ten words are: {term_total.items()[:10]}\")\n",
-    "print(f\"bottom ten words are: {term_total.items()[:-10]}\")\n",
-    "create_zipfs_graph_no_log(word_counts)\n",
-    "create_zipfs_graph(word_counts)\n",
+    "# print(f\"top ten words are: {term_total.items()[:10]}\")\n",
+    "# print(f\"bottom ten words are: {term_total.items()[:-10]}\")\n",
+    "create_zipfs_graph_no_log(term_total)\n",
+    "create_zipfs_graph(term_total)\n",
     "\n",
     "# word to the 5 most similar words and their score\n",
     "term_similar_score = {term: get_similar_words(term) for term in term_total.keys()}\n",
@@ -855,49 +862,49 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from inverted_index_gcp import InvertedIndex as anchorIndex\n",
-    "\n",
-    "anchor_index = anchorIndex()\n",
-    "\n",
-    "# take the 'anchor' and create an RDD from it\n",
-    "doc_anchor = parquetFile.select(\"anchor_text\").rdd\n",
-    "doc_anchor_pairs = parquetFile.select(\"id\",\"anchor_text\").rdd.flatMap(lambda x :x[1]).groupByKey().mapValues(list).map(lambda x : (x[0],\" \".join([y for y in x[1]])))\n",
-    "\n",
-    "\n",
-    "# word counts map\n",
-    "word_counts = doc_anchor.flatMap(lambda x: x.anchor_text).distinct().map(lambda x: word_count(x.text, x.id)).flatMap(lambda x: x).distinct()\n",
-    "postings = word_counts.groupByKey().mapValues(reduce_word_counts)\n",
-    "\n",
-    "w2df = calculate_df(postings)\n",
-    "#word to df map\n",
-    "w2df_dict = w2df.collectAsMap()\n",
-    "\n",
-    "DL_RDD = doc_anchor_pairs.map(lambda x: get_doc_length(str(x[1]), x[0]))\n",
-    "# average length of the corpus's documents\n",
-    "avg_dl = DL_RDD.map(lambda x: x[1]).mean()\n",
-    "# documents length map\n",
-    "dl = DL_RDD.collectAsMap()\n",
-    "\n",
-    "# word counts map for the whole corpus\n",
-    "term_total = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
-    "\n",
-    "N = len(dl)\n",
-    "\n",
-    "# word to idf map\n",
-    "w2idf = {word: math.log(N / df + .0000001, 10) for word, df in w2df_dict.items()}\n",
-    "\n",
-    "doc_all_tf = doc_anchor_pairs.map(lambda x: (x[0], get_doc_counter(x[1])))\n",
-    "\n",
-    "# word to tf-idf map\n",
-    "doc_tfidf = doc_all_tf.map(lambda x: (x[0], {word: (tf / dl[x[0]]) * w2idf[word] for word, tf in x[1]})).collectAsMap()\n",
-    "\n",
-    "# norm of the doc for later cosine similarity calculation\n",
-    "doc_norm = doc_anchor_pairs.map(lambda x: (x[0], get_doc_counter(x[1]))).filter(lambda x: dl[x[0]] != 0).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / dl[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
-    "\n",
-    "# partition posting lists and write out\n",
-    "_ = partition_postings_and_write(postings, anchor_index).collect()\n",
-    "\n",
-    "createIndex(anchor_index, w2df_dict, w2idf, doc_tfidf, term_total, term_similar_score, doc_norm, dl, avg_dl, N, 'anchor_index', False)"
+    "# from inverted_index_gcp import InvertedIndex as anchorIndex\n",
+    "#\n",
+    "# anchor_index = anchorIndex()\n",
+    "#\n",
+    "# # take the 'anchor' and create an RDD from it\n",
+    "# doc_anchor = parquetFile.select(\"anchor_text\").rdd\n",
+    "# doc_anchor_pairs = parquetFile.select(\"id\",\"anchor_text\").rdd.flatMap(lambda x :x[1]).groupByKey().mapValues(list).map(lambda x : (x[0],\" \".join([y for y in x[1]])))\n",
+    "#\n",
+    "#\n",
+    "# # word counts map\n",
+    "# word_counts = doc_anchor.flatMap(lambda x: x.anchor_text).distinct().map(lambda x: word_count(x.text, x.id)).flatMap(lambda x: x).distinct()\n",
+    "# postings = word_counts.groupByKey().mapValues(reduce_word_counts)\n",
+    "#\n",
+    "# w2df = calculate_df(postings)\n",
+    "# #word to df map\n",
+    "# w2df_dict = w2df.collectAsMap()\n",
+    "#\n",
+    "# DL_RDD = doc_anchor_pairs.map(lambda x: get_doc_length(str(x[1]), x[0]))\n",
+    "# # average length of the corpus's documents\n",
+    "# avg_dl = DL_RDD.map(lambda x: x[1]).mean()\n",
+    "# # documents length map\n",
+    "# dl = DL_RDD.collectAsMap()\n",
+    "#\n",
+    "# # word counts map for the whole corpus\n",
+    "# term_total = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
+    "#\n",
+    "# N = len(dl)\n",
+    "#\n",
+    "# # word to idf map\n",
+    "# w2idf = {word: math.log(N / df + .0000001, 10) for word, df in w2df_dict.items()}\n",
+    "#\n",
+    "# doc_all_tf = doc_anchor_pairs.map(lambda x: (x[0], get_doc_counter(x[1])))\n",
+    "#\n",
+    "# # word to tf-idf map\n",
+    "# doc_tfidf = doc_all_tf.map(lambda x: (x[0], {word: (tf / dl[x[0]]) * w2idf[word] for word, tf in x[1]})).collectAsMap()\n",
+    "#\n",
+    "# # norm of the doc for later cosine similarity calculation\n",
+    "# doc_norm = doc_anchor_pairs.map(lambda x: (x[0], get_doc_counter(x[1]))).filter(lambda x: dl[x[0]] != 0).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / dl[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
+    "#\n",
+    "# # partition posting lists and write out\n",
+    "# _ = partition_postings_and_write(postings, anchor_index).collect()\n",
+    "#\n",
+    "# createIndex(anchor_index, w2df_dict, w2idf, doc_tfidf, term_total, term_similar_score, doc_norm, dl, avg_dl, N, 'anchor_index', False)"
    ],
    "metadata": {
     "collapsed": false,
