--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -24,10 +24,10 @@
    "source": [
     "!pip install -q google-cloud-storage==1.43.0\n",
     "!pip install -q graphframes\n",
-    "!pip install -q opencv-contrib-python\n",
-    "!pip install --upgrade urllib3\n",
-    "!pip install gensim --no-binary :all:\n",
-    "!pip install --upgrade numpy"
+    "# !pip install -q opencv-contrib-python\n",
+    "# !pip install --upgrade urllib3\n",
+    "# !pip install gensim --no-binary :all:\n",
+    "# !pip install --upgrade numpy"
    ],
    "metadata": {
     "collapsed": false,
@@ -60,7 +60,7 @@
     "from pathlib import Path\n",
     "import pickle\n",
     "from google.cloud import storage\n",
-    "import gensim.downloader\n",
+    "# import gensim.downloader\n",
     "\n",
     "\n",
     "import hashlib\n",
@@ -136,7 +136,7 @@
     "client = storage.Client()\n",
     "blobs = client.list_blobs(bucket_name)\n",
     "for b in blobs:\n",
-    "    if b.name != 'graphframes.sh' and b.name != 'pageviews-202108-user.pkl' and b.name != 'run_frontend_in_gcp.sh' and b.name != 'startup_script_gcp.sh':\n",
+    "    if \"multi\" in b.name:\n",
     "        paths.append(full_path+b.name)\n",
     "\n",
     "parquetFile = spark.read.parquet(*paths)"
@@ -470,7 +470,7 @@
     "    # YOUR CODE HERE\n",
     "    return postings.groupBy(lambda x: token2bucket_id(x[0])).map(lambda x: index.write_a_posting_list(x, bucket_name))\n",
     "\n",
-    "def createIndex(index, w2df_dict, w2idf, doc_tfidf, term_total, term_similar_score, doc_norm, dl, avg_dl, corpus_size, directory, isTitle):\n",
+    "def createIndex(index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, corpus_size, directory, isTitle):\n",
     "    # collect all posting lists locations into one super-set\n",
     "    super_posting_locs = defaultdict(list)\n",
     "    for blob in client.list_blobs(bucket_name, prefix=f'postings_gcp/'):\n",
@@ -491,8 +491,8 @@
     "    index.doc_tfidf = doc_tfidf\n",
     "    # Add total number of terms dict\n",
     "    index.term_total = term_total\n",
-    "    # add similar words for each word\n",
-    "    index.term_similar_score = term_similar_score\n",
+    "    # # add similar words for each word\n",
+    "    # index.term_similar_score = term_similar_score\n",
     "    # Add DL_body dict\n",
     "    index.dl = dl\n",
     "    # Add Average doc length\n",
@@ -551,25 +551,25 @@
     "  plt.loglog(rank, frequency, '.')\n",
     "\n",
     "\n",
-    "def create_zipfs_graph_no_log(word_counts):\n",
-    "  ''' Plot a log-log scale Zipf's law graph.\n",
-    "  Parameters:\n",
-    "  -----------\n",
-    "  word_counts: Counter\n",
-    "    A counter of term occurences in a corpus.\n",
-    "  Returns:\n",
-    "  --------\n",
-    "  rank: list of int\n",
-    "    Rank of words (x-axis of Zipf's law)\n",
-    "  frequency: list of int\n",
-    "    Count of word occurences (y-axis of Zipf's law)\n",
-    "  '''\n",
-    "  # Assign the appropriate values to the variables rank and frequency used by\n",
-    "  # the ploting function.\n",
-    "  # YOUR CODE HERE\n",
-    "  rank = [x for x in range(1, len(word_counts)+1)]\n",
-    "  frequency = sorted(word_counts.values(), reverse=True)\n",
-    "  plt.plot(rank, frequency)"
+    "# def create_zipfs_graph_no_log(word_counts):\n",
+    "#   ''' Plot a log-log scale Zipf's law graph.\n",
+    "#   Parameters:\n",
+    "#   -----------\n",
+    "#   word_counts: Counter\n",
+    "#     A counter of term occurences in a corpus.\n",
+    "#   Returns:\n",
+    "#   --------\n",
+    "#   rank: list of int\n",
+    "#     Rank of words (x-axis of Zipf's law)\n",
+    "#   frequency: list of int\n",
+    "#     Count of word occurences (y-axis of Zipf's law)\n",
+    "#   '''\n",
+    "#   # Assign the appropriate values to the variables rank and frequency used by\n",
+    "#   # the ploting function.\n",
+    "#   # YOUR CODE HERE\n",
+    "#   rank = [x for x in range(1, len(word_counts)+1)]\n",
+    "#   frequency = sorted(word_counts.values(), reverse=True)\n",
+    "#   plt.plot(rank, frequency)"
    ],
    "metadata": {
     "collapsed": false,
@@ -583,7 +583,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "word2vec_glove = gensim.downloader.load('glove-wiki-gigaword-50')"
+    "# word2vec_glove = gensim.downloader.load('glove-wiki-gigaword-50')"
    ],
    "metadata": {
     "collapsed": false,
@@ -597,12 +597,12 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "def get_similar_words(term):\n",
-    "    try:\n",
-    "        similars = word2vec_glove.most_similar(term, topn=5)\n",
-    "    except:\n",
-    "        similars = [(term, 1) for i in range(5)]\n",
-    "    return similars"
+    "# def get_similar_words(term):\n",
+    "#     try:\n",
+    "#         similars = word2vec_glove.most_similar(term, topn=5)\n",
+    "#     except:\n",
+    "#         similars = [(term, 1) for i in range(5)]\n",
+    "#     return similars"
    ],
    "metadata": {
     "collapsed": false,
@@ -659,11 +659,11 @@
     "print(f\"number of words in corpus: {len(term_total)}\")\n",
     "# print(f\"top ten words are: {term_total.items()[:10]}\")\n",
     "# print(f\"bottom ten words are: {term_total.items()[:-10]}\")\n",
-    "create_zipfs_graph_no_log(term_total)\n",
+    "# create_zipfs_graph_no_log(term_total)\n",
     "create_zipfs_graph(term_total)\n",
     "\n",
-    "# word to the 5 most similar words and their score\n",
-    "term_similar_score = {term: get_similar_words(term) for term in term_total.keys()}\n",
+    "# # word to the 5 most similar words and their score\n",
+    "# term_similar_score = {term: get_similar_words(term) for term in term_total.keys()}\n",
     "\n",
     "# number of documents in the corpus\n",
     "N = len(dl)\n",
@@ -675,7 +675,7 @@
     "doc_all_tf = doc_text_pairs.map(lambda x: (x[1], get_doc_counter(x[0])))\n",
     "\n",
     "# word to tf-idf map\n",
-    "doc_tfidf = doc_all_tf.map(lambda x: (x[0], {word: (tf / dl[x[0]]) * w2idf[word] for word, tf in x[1]})).collectAsMap()\n",
+    "doc_tfidf = doc_all_tf.map(lambda x: (x[0], {word: (tf / dl[x[0]]) * w2idf[word] for word, tf in x[1].items()})).collectAsMap()\n",
     "\n",
     "# norm of the doc for later cosine similarity calculation\n",
     "doc_norm = doc_all_tf.map(lambda x: (x[0], np.linalg.norm([(x[1][term] / dl[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
@@ -683,7 +683,7 @@
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, body_index).collect()\n",
     "\n",
-    "createIndex(body_index, w2df_dict, w2idf, doc_tfidf, term_total, term_similar_score, doc_norm, dl, avg_dl, N, 'body_index', False)\n",
+    "createIndex(body_index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, N, 'body_index', False)\n",
     "\n",
     "end = time()\n",
     "print(end - start)"
@@ -740,11 +740,11 @@
     "print(f\"number of words in corpus: {len(term_total)}\")\n",
     "# print(f\"top ten words are: {term_total.items()[:10]}\")\n",
     "# print(f\"bottom ten words are: {term_total.items()[:-10]}\")\n",
-    "create_zipfs_graph_no_log(term_total)\n",
+    "# create_zipfs_graph_no_log(term_total)\n",
     "create_zipfs_graph(term_total)\n",
     "\n",
-    "# word to the 5 most similar words and their score\n",
-    "term_similar_score = {term: get_similar_words(term) for term in term_total.keys()}\n",
+    "# # word to the 5 most similar words and their score\n",
+    "# term_similar_score = {term: get_similar_words(term) for term in term_total.keys()}\n",
     "\n",
     "N = len(dl)\n",
     "print(f\"number of docs in corpus: {N}\")\n",
@@ -755,7 +755,7 @@
     "doc_all_tf = doc_title_pairs.map(lambda x: (x[1], get_doc_counter(x[0])))\n",
     "\n",
     "# word to tf-idf map\n",
-    "doc_tfidf = doc_all_tf.map(lambda x: (x[0], {word: (tf / dl[x[0]]) * w2idf[word] for word, tf in x[1]})).collectAsMap()\n",
+    "doc_tfidf = doc_all_tf.map(lambda x: (x[0], {word: (tf / dl[x[0]]) * w2idf[word] for word, tf in x[1].items()})).collectAsMap()\n",
     "\n",
     "# norm of the doc for later cosine similarity calculation\n",
     "doc_norm = doc_title_pairs.map(lambda x: (x[1], get_doc_counter(x[0]))).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / dl[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
@@ -763,7 +763,7 @@
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, title_index).collect()\n",
     "\n",
-    "createIndex(title_index, w2df_dict, w2idf, doc_tfidf, term_total, term_similar_score, doc_norm, dl, avg_dl, N, 'title_index', True)\n",
+    "createIndex(title_index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, N, 'title_index', True)\n",
     "\n",
     "end = time()\n",
     "print(end - start)"
@@ -822,11 +822,11 @@
     "print(f\"number of words in corpus: {len(term_total)}\")\n",
     "# print(f\"top ten words are: {term_total.items()[:10]}\")\n",
     "# print(f\"bottom ten words are: {term_total.items()[:-10]}\")\n",
-    "create_zipfs_graph_no_log(term_total)\n",
+    "# create_zipfs_graph_no_log(term_total)\n",
     "create_zipfs_graph(term_total)\n",
     "\n",
-    "# word to the 5 most similar words and their score\n",
-    "term_similar_score = {term: get_similar_words(term) for term in term_total.keys()}\n",
+    "# # word to the 5 most similar words and their score\n",
+    "# term_similar_score = {term: get_similar_words(term) for term in term_total.keys()}\n",
     "\n",
     "N = len(dl)\n",
     "print(f\"number of docs in corpus: {N}\")\n",
@@ -837,7 +837,7 @@
     "doc_all_tf = doc_anchor_pairs.map(lambda x: (x[0], get_doc_counter(x[1])))\n",
     "\n",
     "# word to tf-idf map\n",
-    "doc_tfidf = doc_all_tf.map(lambda x: (x[0], {word: (tf / dl[x[0]]) * w2idf[word] for word, tf in x[1]})).collectAsMap()\n",
+    "doc_tfidf = doc_all_tf.map(lambda x: (x[0], {word: (tf / dl[x[0]]) * w2idf[word] for word, tf in x[1].items()})).collectAsMap()\n",
     "\n",
     "# norm of the doc for later cosine similarity calculation\n",
     "doc_norm = doc_anchor_pairs.map(lambda x: (x[0], get_doc_counter(x[1]))).filter(lambda x: dl[x[0]] != 0).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / dl[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
@@ -845,7 +845,7 @@
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, anchor_index).collect()\n",
     "\n",
-    "createIndex(anchor_index, w2df_dict, w2idf, doc_tfidf, term_total, term_similar_score, doc_norm, dl, avg_dl, N, 'anchor_index', False)\n",
+    "createIndex(anchor_index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, N, 'anchor_index', False)\n",
     "\n",
     "end = time()\n",
     "print(end - start)"
