--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -470,7 +470,7 @@
     "    # YOUR CODE HERE\n",
     "    return postings.groupBy(lambda x: token2bucket_id(x[0])).map(lambda x: index.write_a_posting_list(x, bucket_name))\n",
     "\n",
-    "def createIndex(index, w2df_dict, w2idf, doc_tfidf, term_total, term_similar_score, doc_norm, dl, avg_dl, corpus_size, directory, isTitle):\n",
+    "def createIndex(index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, corpus_size, directory, isTitle):\n",
     "    # collect all posting lists locations into one super-set\n",
     "    super_posting_locs = defaultdict(list)\n",
     "    for blob in client.list_blobs(bucket_name, prefix=f'postings_gcp/'):\n",
@@ -630,6 +630,8 @@
    "source": [
     "from inverted_index_gcp import InvertedIndex as bodyIndex\n",
     "\n",
+    "start = time()\n",
+    "\n",
     "body_index = bodyIndex()\n",
     "\n",
     "# take the 'text' and 'id' and create an RDD from it\n",
@@ -680,7 +682,10 @@
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, body_index).collect()\n",
     "\n",
-    "createIndex(body_index, w2df_dict, w2idf, doc_tfidf, term_total, term_similar_score, doc_norm, dl, avg_dl, N, 'body_index', False)"
+    "createIndex(body_index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, N, 'body_index', False)\n",
+    "\n",
+    "end = time()\n",
+    "print(f\"time taken: {end-start}\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -707,6 +712,8 @@
    "outputs": [],
    "source": [
     "from inverted_index_gcp import InvertedIndex as titleIndex\n",
+    "\n",
+    "start = time()\n",
     "\n",
     "title_index = titleIndex()\n",
     "\n",
@@ -754,7 +761,10 @@
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, title_index).collect()\n",
     "\n",
-    "createIndex(title_index, w2df_dict, w2idf, doc_tfidf, term_total, term_similar_score, doc_norm, dl, avg_dl, N, 'title_index', True)"
+    "createIndex(title_index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, N, 'title_index', True)\n",
+    "\n",
+    "end = time()\n",
+    "print(f\"time taken: {end-start}\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -781,6 +791,8 @@
    "outputs": [],
    "source": [
     "from inverted_index_gcp import InvertedIndex as anchorIndex\n",
+    "\n",
+    "start = time()\n",
     "\n",
     "anchor_index = anchorIndex()\n",
     "\n",
@@ -834,7 +846,7 @@
     "createIndex(anchor_index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, N, 'anchor_index', False)\n",
     "\n",
     "end = time()\n",
-    "print(end - start)"
+    "print(f\"time taken: {end-start}\")"
    ],
    "metadata": {
     "collapsed": false,
