--- a/search_engine/startup_shell_comands.ipynb
+++ b/search_engine/startup_shell_comands.ipynb
@@ -12,7 +12,6 @@
    "outputs": [],
    "source": [
     "pip install gensim\n",
-    "\n",
     "mkdir indices\n",
     "mkdir body_bins\n",
     "mkdir title_bins\n",
@@ -22,7 +21,8 @@
     "gsutil -m cp gs://information_retrieval_project/postings_gcp_body_new/*.bin \"body_bins/\"\n",
     "gsutil -m cp gs://information_retrieval_project/postings_gcp_title_new/*.bin \"title_bins/\"\n",
     "gsutil -m cp gs://information_retrieval_project/postings_gcp_anchor_new/*.bin \"anchor_bins/\"\n",
-    "gsutil -m cp gs://information_retrieval_project/views_ranks/* \"views_ranks/\""
+    "gsutil -m cp gs://information_retrieval_project/views_ranks/* \"views_ranks/\"\n",
+    "gunzip views_ranks/part-00000-562c3bda-ffab-4c73-944f-08aa804bf5db-c000.csv.gz"
    ]
   }
  ],
